# geo_crystal

./: .gitignore  INTEGRATION_SUMMARY.md  README.md  app.py  demo_data.py  env.template  main.py  pyproject.toml  requirements.txt  streamlit_helpers.py  test_integration.py
.cursor/: worktrees.json
components/: __init__.py  content_comparison.py  geo_score_card.py  recommendations_list.py
config/: __init__.py  config.py  constants.py
data/audits/: www.agora.software_fr__20251112_003719.json  www.agora.software_fr__20251112_005256.json
data/demo/: example.com_article_what-is-artificial-intelligence.json  example.com_blog_how-to-start-a-business.json  example.com_guide_climate-change-solutions.json
pages/: 1_audit.py  2_transform.py  3_results.py  __init__.py
src/: __init__.py
src/analysis/: __init__.py  content_extractor.py  gap_analyzer.py  prompt_generator.py
src/audit/: __init__.py  content_analyzer.py  crawler.py  geo_scorer.py  technical_analyzer.py
src/core/: __init__.py
src/models/: __init__.py  models.py
src/transformation/: __init__.py  ai_client.py  content_transformer.py  geo_optimizer.py  schema_generator.py
src/utils/: __init__.py  logger.py  storage.py  validators.py
